Alembic import issue with multiple materials on a mesh #65959

Closed
opened 2019-06-20 16:51:37 +02:00 by terry · 5 comments

System Information
Operating system: Windows-10-10.0.10586 64 Bits
Graphics card: Geforce 860M/Intel(R) HD Graphics 4600 Intel 4.3.0 - Build 20.19.15.4624

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: d30f72dfd8
Worked: (optional)

Short description of error
loaded Alembic sample.
not showing materials correctly.
Also smoothing incorrect when shatter starts.

Exact steps for others to reproduce the error
Load Alembic.
Change material 2 to RED color.
scrub timeline to start of animation - see the mess.

Smoothing.
Load Alembic.
scrub till shatter happens.
see bad smoothing.

alembic.ABC

**System Information** Operating system: Windows-10-10.0.10586 64 Bits Graphics card: Geforce 860M/Intel(R) HD Graphics 4600 Intel 4.3.0 - Build 20.19.15.4624 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: `d30f72dfd8` Worked: (optional) **Short description of error** loaded Alembic sample. not showing materials correctly. Also smoothing incorrect when shatter starts. **Exact steps for others to reproduce the error** Load Alembic. Change material 2 to RED color. scrub timeline to start of animation - see the mess. Smoothing. Load Alembic. scrub till shatter happens. see bad smoothing. [alembic.ABC](https://archive.blender.org/developer/F7365885/alembic.ABC)
Author

Added subscriber: @sanger.terry

Added subscriber: @sanger.terry
Author

Alembic material/smoothing bug.

Alembic material/smoothing bug.
Brecht Van Lommel changed title from Alembic bug to Alembic import issue with multiple materials on a mesh 2019-06-21 13:28:07 +02:00
Sybren A. Stüvel was assigned by Brecht Van Lommel 2019-06-21 13:28:07 +02:00

I did some investigation, and the material assignment issue seems to be a problem with 3DS Max. The ABC file contains a material assignment per mesh face, using face indices to indicate which face has which material. These face indices are numbered incorrectly: they use the numbering from the faces after the mesh breaks apart (where it has 4372 faces), even for the frames where the mesh is still in one piece (and only has 968 faces).

As for the normals, this is a limitation of Blender. When the ABC mesh has face-varying normals, it discards the normals themselves and just enables smooth shading. Actually properly loading the normals is thus a new feature -- I'm working on a patch, but it won't be merged into 2.80.

I did some investigation, and the material assignment issue seems to be a problem with 3DS Max. The ABC file contains a material assignment per mesh face, using face indices to indicate which face has which material. These face indices are numbered incorrectly: they use the numbering from the faces after the mesh breaks apart (where it has 4372 faces), even for the frames where the mesh is still in one piece (and only has 968 faces). As for the normals, this is a limitation of Blender. When the ABC mesh has face-varying normals, it discards the normals themselves and just enables smooth shading. Actually properly loading the normals is thus a new feature -- I'm working on a patch, but it won't be merged into 2.80.

I'm closing this task, as the part that we can fix in Blender (the glitching normals) has been fixed in e9c149d911.

I'm closing this task, as the part that we can fix in Blender (the glitching normals) has been fixed in e9c149d911.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65959
No description provided.